--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     hibernate:  
       ddl-auto: update
     show-sql: true
+  aop:
+    auto: true
 #redis配置  
   redis: 
     host: 127.0.0.1
